editor/sass/editor.scss
/* ... */
.picker-curve {
    > .content {
        border: 1px solid #000;
        width: 470px;
        background-color: transparent;
        white-space: nowrap;
        transition: none;

        > .picker-curve-panel {
            height: 100%;
            font-size: 11px;

            > .picker-curve-header {
                padding: 5px 10px;

                > .content {
                    .ui-button.picker-curve-toggle {
                        float: right;
                        text-align: center;
                        line-height: 22px;
                        width: auto;
                        min-width: 14px;
                        padding-left: 5px;
                        padding-right: 5px;
                        margin: 3px 0px;

                        & + .ui-button.picker-curve-toggle {
                            border-right: none;
                        }

                        &.active.first {
                            color: rgb(255, 0, 0);
                        }

                        &.active.second {
                            color: rgb(0, 255, 0);
                        }

                        &.active.third {
                            color: rgb(133, 133, 252);
                        }
                    }

                }
            }

            > .picker-curve-footer {
                padding: 5px 10px;

                .ui-button {
                    float: right;
                    font-size: 11px;
                }
            }
        }
    }
}

.ui-label.cursor-tooltip {
    font-family: "Lucida Console", Monaco, monospace;
    font-weight: normal;
    font-size: 10px;
    display: block;
    position: absolute;
    top: -26px;
    left: 8px;
    background-color: #181e20;
    margin: 0;
    padding: 0 6px;
    line-height: 18px;
    opacity: 1;
    visibility: visible;
    transition: opacity 100ms, visibility 100ms;
}
.ui-label.cursor-tooltip.hidden {
    display: block;
    opacity: 0;
    visibility: hidden;
}

